--- a/themes/jidn/assets/css/jidn.css
+++ b/themes/jidn/assets/css/jidn.css
@@ -44,7 +44,7 @@ body {
   overflow-x: hidden;
 }
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Libre Baskerville", Baskerville, "Book Antiqua", Georgia, Times, serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -64,11 +64,11 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: "Avenir Next", "Helvetica Neue", Calibri, sans-serif;
+  font-family: "Libre Baskerville", Baskerville, "Book Antiqua", Georgia, Times, serif;
 }
 section.entry-content {
   margin-bottom: 60px;
-  font-family: "Avenir Next", "Helvetica Neue", Calibri, sans-serif;
+  font-family: "Libre Baskerville", Baskerville, "Book Antiqua", Georgia, Times, serif;
 }
 h1,
 h2,
@@ -77,7 +77,7 @@ h4,
 h5,
 h6 {
   margin-bottom: 0.5rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Libre Baskerville", Baskerville, "Book Antiqua", Georgia, Times, serif;
   font-weight: 400;
   line-height: 1.2495;
   color: #313131;
